# zero2prod

./: .gitignore  COMMANDS.md  Cargo.toml  Dockerfile  Dockerfile-canonical  curl-post.sh  spec.yaml  sqlx-data.json
configuration/: base.yaml  production.yaml
migrations/: 20230904032937_create_users_table.sql  20230904184357_remove_salt_From_users.sql  20230909082305_seed_user.sql
scripts/: init_db.sh  init_redis.sh  run_commands.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: admin.html  dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: post.rs
src/routes/admin/password/: form.html  get.rs  mod.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
steps/: install_pgadmin.sh
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
