[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
config = "0.11"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1"
secrecy = { version = "0.8", features  = ["serde"] }
tracing-actix-web = "0.5"
serde-aux = "4"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
once_cell = "1.18.0"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.47"
anyhow = "1.0.75"
base64 = "0.13"
argon2 = { version = "0.3", features = ["std"]}
urlencoding = "2"
htmlescape = "0.3"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
serde_json = "1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.actix-session]
git = "https://github.com/actix/actix-extras"
branch = "master"
features = ["redis-rs-tls-session"]

[dev-dependencies]
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
tokio = { version = "1", features = ["macros", "rt"]}
wiremock = "0.5"
linkify = "0.8"
