[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = "1.0.115"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
log = "0.4"
tracing = "0.1.19"
secrecy = { version = "0.8", features  = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
once_cell = "1.18.0"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.24"
anyhow = "1.0.75"
base64 = "0.21.0"
argon2 = { version = "0.4", features = ["std"]}
urlencoding = "2"
htmlescape = "0.3"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
serde_json = "1"
actix-web-lab = "0.18"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }

[dev-dependencies]
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
tokio = { version = "1", features = ["macros", "rt"]}
wiremock = "0.5"
linkify = "0.8"
